--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>757</width>
-    <height>704</height>
+    <width>810</width>
+    <height>750</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>810</width>
+    <height>750</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>DectrisLiveView</string>
@@ -94,6 +100,12 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>720</width>
+          <height>650</height>
+         </size>
+        </property>
        </widget>
       </item>
      </layout>
@@ -105,7 +117,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>757</width>
+     <width>810</width>
      <height>22</height>
     </rect>
    </property>
