--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -75,18 +75,18 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="spinBoxExposure">
-          <property name="minimum">
-           <number>1</number>
+         <widget class="QLineEdit" name="lineEditExposure">
+          <property name="maximumSize">
+           <size>
+            <width>100</width>
+            <height>16777215</height>
+           </size>
           </property>
-          <property name="maximum">
-           <number>1000000</number>
+          <property name="text">
+           <string>300</string>
           </property>
-          <property name="singleStep">
-           <number>50</number>
-          </property>
-          <property name="value">
-           <number>300</number>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
