--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -26,17 +26,14 @@
       <item row="1" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+         <widget class="QProgressBar" name="progressBarExposure">
+          <property name="value">
+           <number>0</number>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
+          <property name="textVisible">
+           <bool>false</bool>
           </property>
-         </spacer>
+         </widget>
         </item>
         <item>
          <widget class="QLabel" name="label">
