--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -36,16 +36,6 @@
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBoxAutoRange">
-          <property name="text">
-           <string>Auto Range</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Trigger Mode</string>
@@ -135,7 +125,15 @@
     <addaction name="actionAddRectangle"/>
     <addaction name="actionLinkYAxis"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionShowProjections"/>
+    <addaction name="actionAutoRange"/>
+   </widget>
    <addaction name="menuROI"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAddRectangle">
@@ -157,6 +155,48 @@
    </property>
    <property name="text">
     <string>Link Y Axis</string>
+   </property>
+  </action>
+  <action name="actionShow_Projections">
+   <property name="text">
+    <string>Show Projections</string>
+   </property>
+  </action>
+  <action name="actionROI">
+   <property name="text">
+    <string>ROI</string>
+   </property>
+  </action>
+  <action name="actionShowProjections">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Show Projections</string>
+   </property>
+  </action>
+  <action name="actionAutoRange">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Auto Range</string>
+   </property>
+  </action>
+  <action name="actionRemoveLastROI">
+   <property name="text">
+    <string>Remove Last ROI</string>
+   </property>
+  </action>
+  <action name="actionRemoveAllROIs">
+   <property name="text">
+    <string>Remove All ROIs</string>
    </property>
   </action>
  </widget>
