--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -84,7 +84,7 @@
        </layout>
       </item>
       <item row="0" column="0">
-       <widget class="LiveViewWidget" name="viewer" native="true">
+       <widget class="ImageViewWidget" name="viewer" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -234,7 +234,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>LiveViewWidget</class>
+   <class>ImageViewWidget</class>
    <extends>QWidget</extends>
    <header location="global">DectrisTools.ui.widgets</header>
    <container>1</container>
