--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -109,7 +109,7 @@
      <x>0</x>
      <y>0</y>
      <width>810</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuROI">
@@ -127,6 +127,7 @@
     </property>
     <addaction name="actionShowProjections"/>
     <addaction name="actionAutoRange"/>
+    <addaction name="actionShowMaxPixelValue"/>
    </widget>
    <widget class="QMenu" name="menuTiggerMode">
     <property name="title">
@@ -241,6 +242,17 @@
    </property>
    <property name="text">
     <string>stop</string>
+   </property>
+  </action>
+  <action name="actionShowMaxPixelValue">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show Max Pixel Value</string>
    </property>
   </action>
  </widget>
