--- a/DectrisTools/ui/liveview.ui
+++ b/DectrisTools/ui/liveview.ui
@@ -126,7 +126,7 @@
      <string>View</string>
     </property>
     <addaction name="actionShowProjections"/>
-    <addaction name="actionAutoRange"/>
+    <addaction name="actionAutoLevels"/>
     <addaction name="actionShowMaxPixelValue"/>
     <addaction name="actionShowFrame"/>
    </widget>
@@ -250,7 +250,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Show Max Pixel Value</string>
@@ -262,6 +262,17 @@
    </property>
    <property name="text">
     <string>Show Frame</string>
+   </property>
+  </action>
+  <action name="actionAutoLevels">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Auto Levels</string>
    </property>
   </action>
  </widget>
